@@ -1,3 +1,11 @@
+2016-09-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* gimple-ssa-sprintf.c (pass_sprintf_length::gate): Use x > 0 instead
+	of 0 < x.
+	(format_floating, format_string, format_directive,
+	get_destination_size, pass_sprintf_length::handle_gimple_call):
+	Likewise.
+
 2016-09-28  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/77756
